--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,10 +1,11 @@
 <style>
   .login-page {
     width: 360px;
-    padding: 8% 0 0;
+    padding: 40% 0 0;
     margin: auto;
   }
   .form {
+    border: 1px solid #999;
     position: relative;
     z-index: 1;
     background: #FFFFFF;
@@ -54,41 +55,9 @@
   .form .register-form {
     display: none;
   }
-  .container {
-    position: relative;
-    z-index: 1;
-    max-width: 300px;
-    margin: 0 auto;
-  }
-  .container:before, .container:after {
-    content: "";
-    display: block;
-    clear: both;
-  }
-  .container .info {
-    margin: 50px auto;
-    text-align: center;
-  }
-  .container .info h1 {
-    margin: 0 0 15px;
-    padding: 0;
-    font-size: 36px;
-    font-weight: 300;
-    color: #1a1a1a;
-  }
-  .container .info span {
-    color: #4d4d4d;
-    font-size: 12px;
-  }
-  .container .info span a {
-    color: #000000;
-    text-decoration: none;
-  }
-  .container .info span .fa {
-    color: #EF3B3A;
-  }
   body {
-    background: url('images/bg1.png') no-repeat;
+    background: url('images/bg.jpg') no-repeat;
+    background-size: cover;
     font-family: "Roboto", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -137,9 +106,6 @@
   }
 </style>
 <div class="htmleaf-container">
-  <header class="htmleaf-header">
-    <h1><span>Login Form</span></h1>
-  </header>
   <div id="wrapper" class="login-page">
     <div id="login_form" class="form">
       <form class="register-form">
