--- a/app/views/login.html
+++ b/app/views/login.html
@@ -4,6 +4,9 @@
     padding: 40% 0 0;
     margin: auto;
   }
+  .login-hide {
+    display: none;
+  }
   .form {
     border: 1px solid #999;
     position: relative;
@@ -118,7 +121,7 @@
       <form class="login-form">
         <input type="text" placeholder="用户名" id="user_name"/>
         <input type="password" placeholder="密码" id="password"/>
-        <button id="login">登　录</button>
+        <button id="login" ng-click="submit()">登　录</button>
         <p class="message">还没有账户? <a href="#">立刻创建</a></p>
       </form>
     </div>
