update login page.

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -59,7 +59,7 @@
     display: none;
   }
   body {
-    background: url('images/bg.jpg') no-repeat;
+    background: url('images/bg3.jpg') no-repeat;
     background-size: cover;
     font-family: "Roboto", sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -107,10 +107,17 @@
   p.center{
     color: #fff;font-family: "Microsoft YaHei";
   }
+  .login-logo{
+    font-size: 30px;
+    margin: 0 0 25px;
+  }
 </style>
 <div class="htmleaf-container">
   <div id="wrapper" class="login-page">
     <div id="login_form" class="form">
+      <div class="login-logo">
+        <span>Next OA</span>
+      </div>
       <form class="register-form">
         <input type="text" placeholder="用户名" id="r_user_name"/>
         <input type="password" placeholder="密码" id="r_password" />
