--- a/app/views/login.html
+++ b/app/views/login.html
@@ -27,7 +27,7 @@
     overflow:hidden;
     position:absolute;
     width:320px;
-    height:460px;
+    height:420px;
     box-shadow:1px 1px 1000px 1000px rgba(0,0,0,0.2),0px 0px 20px 4px rgba(0,0,0,0.2);
     left:50%;
     top:50%;
@@ -53,13 +53,20 @@
   .login-btn > a {
     display:block;
     text-align:center;
-    padding:10px 0px;
+    line-height: 22px;
+    padding:12px 0px;
     background-color:rgba(21, 74, 118,0.82);
-    font-size:20px;
-    font-family:Arial;
-    font-weight:100;
+    font-size:18px;
     width:100%;
     color:#fff;
+  }
+
+  .login-btn > a:hover {
+    text-decoration: none;
+    font-size:22px;
+  }
+  .login-btn > a:focus {
+    text-decoration: none;
   }
 
   .login-head {
@@ -72,8 +79,8 @@
 
   .login-head p {
     position:relative;
-    margin: 0px 16px;
-    font-size:48px;
+    margin: 70px 0;
+    font-size:150px;
     font-weight:bold;
     color:#fff;
     -webkit-transition: all 500ms;
@@ -92,7 +99,7 @@
     left:0px;
   }
   .login-content {
-    position: relative;
+    position: absolute;
     width:100%;
     height:94%;
     float:left;
@@ -100,7 +107,7 @@
     -webkit-transition: all 500ms;
     -o-transition: all 500ms;
     transition: all 500ms;
-    bottom:0px;
+    top:30px;
   }
 
   .login-content > h2 {
@@ -122,7 +129,7 @@
   }
 
   .input_text {
-    width:270px;
+    width:230px;
     padding:10px;
     border:1px solid rgba(0,0,0,0.2);
     font-size:20px;
@@ -137,7 +144,7 @@
   .login-welcome {
     position:relative;
     top:50%;
-    left:-115px;
+    left:-320px;
   }
   .login-finish > .login-welcome {
     left:115px;
@@ -177,10 +184,10 @@
   <div class="login-warp">
     <div class="login-box">
       <div class="login-head">
-        <p>NextOA</p>
+        <p>N</p>
       </div>
       <div class="login-content">
-        <h2>JOIN</h2>
+        <h2>Next OA</h2>
         <p>Login:</p>
         <input type="text" class="input_text"/>
         <p>Password:</p>
@@ -189,7 +196,7 @@
         <input type="password" class="input_text"/>
       </div>
       <div class="login-welcome">
-        <h2>Welcome <i class="material-icons">&#xE5CA;</i></h2>
+        <h2>Welcome</h2>
       </div>
       <div class="login-btn">
         <a href="javascript:void(0)" ng-click="main.join()">Login</a>
