update login page.

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -29,6 +29,9 @@
     width:320px;
     height:420px;
     box-shadow:1px 1px 1000px 1000px rgba(0,0,0,0.2),0px 0px 20px 4px rgba(0,0,0,0.2);
+    -webkit-border-radius:5px;
+    -moz-border-radius:5px;
+    border-radius:5px;
     left:50%;
     top:50%;
     margin-top:-230px;
@@ -102,7 +105,7 @@
   .login-content {
     position: absolute;
     width:100%;
-    height:94%;
+    height:85%;
     float:left;
     left:-320px;
     -webkit-transition: all 500ms;
@@ -192,9 +195,9 @@
       </div>
       <div class="login-content">
         <h2>Next OA</h2>
-        <p>Login:</p>
+        <p>Login:</p><i class="fa fa-home fa-fw"></i>
         <input type="text" class="input_text"/>
-        <p>Password:</p>
+        <p>Password:</p><i class="fa fa-home fa-fw"></i>
         <input type="text" class="input_text"/>
         <span style="display: block">立即注册</span>
       </div>
