update login page.

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,7 +1,7 @@
 <style>
   body {
     background: url('images/bg1.png') no-repeat;
-    background-size: inherit;
+    background-size: cover;
     font-family: "Roboto", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -196,7 +196,7 @@
   <div class="login-warp">
     <div class="login-box">
       <div class="login-head">
-        <p>N</p>
+        <p><i class="fa fa-cogs fa-fw"></i></p>
       </div>
       <div class="login-content">
         <h2>Next OA</h2>
