--- a/app/views/login.html
+++ b/app/views/login.html
@@ -214,7 +214,8 @@
         <h2>Welcome</h2>
       </div>
       <div class="login-btn">
-        <a href="javascript:void(0)" ng-click="main.join()">Login</a>
+        <a href="javascript:void(0)" ng-click="main.join()" ng-show="main.flag.isJoinTab">Join</a>
+        <a href="javascript:void(0)" ng-click="main.submit()" ng-show="main.flag.isLoginTab">Login</a>
       </div>
     </div>
   </div>
