--- a/app/views/login.html
+++ b/app/views/login.html
@@ -155,11 +155,11 @@
   }
   .login-welcome {
     position:relative;
-    top:50%;
+    top:35%;
     left:-320px;
   }
   .login-finish > .login-welcome {
-    left:115px;
+    left:0px;
     -webkit-transition: all 1s;
     -o-transition: all 1s;
     transition: all 1s;
@@ -174,6 +174,8 @@
 
   .login-finish  {
     box-shadow:0px 0px;
+    background: #666;
+    opacity: 0.6;
   }
 
   .login-finish:hover {
@@ -202,13 +204,13 @@
         <h2>Next OA</h2>
         <p>
           <i class="fa fa-user fa-fw"></i>
-          <input type="text" class="input_text" placeholder="Account"/>
+          <input type="text" id="user_name" class="input_text" placeholder="Account"/>
         </p>
         <p>
           <i class="fa fa-lock fa-fw"></i>
-          <input type="text" class="input_text" placeholder="Password"/>
+          <input type="password" id="password" class="input_text" placeholder="Password"/>
         </p>
-        <a href="javascript:void(0)">立即注册</a>
+        <a href="javascript:void(0)" ng-click="main.register()">立即注册</a>
       </div>
       <div class="login-welcome">
         <h2>Welcome</h2>
