--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -1,10 +1,107 @@
-<div class="navbar navbar-default" role="navigation">
-  <div class="container">
-    <md-nav-bar md-selected-nav-item="currentNavItem">
-      <md-nav-item md-nav-href="/" name="home">Home</md-nav-item>
-      <md-nav-item md-nav-href="#!dinner" name="dinner">Dinner</md-nav-item>
-      <md-nav-item md-nav-href="#!cat" name="cat">Cat</md-nav-item>
-      <md-nav-item md-nav-href="/" name="other">Other</md-nav-item>
-    </md-nav-bar>
-  </div>
+<div>
+  <header class="cd-main-header">
+    <a href="/" class="cd-logo">Next OA</a>
+
+    <div class="cd-search is-hidden">
+      <form action="#0">
+        <input type="search" placeholder="Search...">
+      </form>
+    </div> <!-- cd-search -->
+
+    <a href="#0" class="cd-nav-trigger">Menu<span></span></a>
+
+    <nav class="cd-nav">
+      <ul class="cd-top-nav">
+        <li><a href="#0">Tour</a></li>
+        <li><a href="#0">Support</a></li>
+        <li class="has-children account">
+          <a href="#0">
+            <img src="img/cd-avatar.png" alt="avatar">
+            Account
+          </a>
+
+          <ul>
+
+            <li><a href="#0">My Account</a></li>
+            <li><a href="#0">Edit Account</a></li>
+            <li><a href="#0">Logout</a></li>
+          </ul>
+        </li>
+      </ul>
+    </nav>
+  </header> <!-- .cd-main-header -->
+
+  <main class="cd-main-content">
+    <nav class="cd-side-nav">
+      <ul>
+        <li class="cd-label">Main</li>
+        <li class="has-children overview">
+          <a href="#0">Overview</a>
+
+          <ul>
+            <li><a href="#0">All Data</a></li>
+            <li><a href="#0">Category 1</a></li>
+            <li><a href="#0">Category 2</a></li>
+          </ul>
+        </li>
+        <li class="has-children notifications active">
+          <a href="#0">Notifications<span class="count">3</span></a>
+
+          <ul>
+            <li><a href="#0">All Notifications</a></li>
+            <li><a href="#0">Friends</a></li>
+            <li><a href="#0">Other</a></li>
+          </ul>
+        </li>
+
+        <li class="has-children comments">
+          <a href="#0">Comments</a>
+
+          <ul>
+            <li><a href="#0">All Comments</a></li>
+            <li><a href="#0">Edit Comment</a></li>
+            <li><a href="#0">Delete Comment</a></li>
+          </ul>
+        </li>
+      </ul>
+
+      <ul>
+        <li class="cd-label">Secondary</li>
+        <li class="has-children bookmarks">
+          <a href="#0">Bookmarks</a>
+
+          <ul>
+            <li><a href="#0">All Bookmarks</a></li>
+            <li><a href="#0">Edit Bookmark</a></li>
+            <li><a href="#0">Import Bookmark</a></li>
+          </ul>
+        </li>
+        <li class="has-children images">
+          <a href="#0">Images</a>
+
+          <ul>
+            <li><a href="#0">All Images</a></li>
+            <li><a href="#0">Edit Image</a></li>
+          </ul>
+        </li>
+
+        <li class="has-children users">
+          <a href="#0">Users</a>
+
+          <ul>
+            <li><a href="#0">All Users</a></li>
+            <li><a href="#0">Edit User</a></li>
+            <li><a href="#0">Add User</a></li>
+          </ul>
+        </li>
+      </ul>
+
+      <ul>
+        <li class="cd-label">Action</li>
+        <li class="action-btn"><a href="#0">+ Button</a></li>
+      </ul>
+    </nav>
+
+    <!--</div> &lt;!&ndash; .content-wrapper &ndash;&gt;-->
+  </main> <!-- .cd-main-content -->
 </div>
