--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -1,6 +1,6 @@
 <div>
   <header class="cd-main-header">
-    <a href="/" class="cd-logo">Next OA</a>
+    <a href="/" class="cd-logo"><i class="fa fa-cogs fa-fw"></i>&nbsp;Next OA</a>
 
     <div class="cd-search is-hidden">
       <form action="#0">
