--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -1,6 +1,6 @@
 <div>
   <header class="cd-main-header">
-    <a href="/" class="cd-logo"><i class="fa fa-cogs fa-fw"></i>&nbsp;Next OA</a>
+    <a href="/" class="cd-logo"><i class="fa fa-cogs fa-fw"></i>&nbsp;&nbsp;Next OA</a>
 
     <div class="cd-search is-hidden">
       <form action="#0">
@@ -8,7 +8,7 @@
       </form>
     </div> <!-- cd-search -->
 
-    <a href="#0" class="cd-nav-trigger">Menu<span></span></a>
+    <a href="#0" class="cd-nav-trigger"> <span> </span></a>
 
     <nav class="cd-nav">
       <ul class="cd-top-nav">
@@ -36,7 +36,7 @@
       <ul>
         <li class="cd-label">Main</li>
         <li class="has-children overview">
-          <a href="#0">Overview</a>
+          <a href="#0"><i class="fa fa-pie-chart fa-fw"></i>&nbsp;&nbsp;Overview</a>
 
           <ul>
             <li><a href="#0">All Data</a></li>
@@ -45,7 +45,7 @@
           </ul>
         </li>
         <li class="has-children notifications active">
-          <a href="#0">Notifications<span class="count">3</span></a>
+          <a href="#0"><i class="fa fa-bell fa-fw"></i>&nbsp;&nbsp;Notifications<span class="count">3</span></a>
 
           <ul>
             <li><a href="#0">All Notifications</a></li>
@@ -55,43 +55,12 @@
         </li>
 
         <li class="has-children comments">
-          <a href="#0">Comments</a>
+          <a href="#0"><i class="fa fa-commenting fa-fw"></i>&nbsp;Comments</a>
 
           <ul>
             <li><a href="#0">All Comments</a></li>
             <li><a href="#0">Edit Comment</a></li>
             <li><a href="#0">Delete Comment</a></li>
-          </ul>
-        </li>
-      </ul>
-
-      <ul>
-        <li class="cd-label">Secondary</li>
-        <li class="has-children bookmarks">
-          <a href="#0">Bookmarks</a>
-
-          <ul>
-            <li><a href="#0">All Bookmarks</a></li>
-            <li><a href="#0">Edit Bookmark</a></li>
-            <li><a href="#0">Import Bookmark</a></li>
-          </ul>
-        </li>
-        <li class="has-children images">
-          <a href="#0">Images</a>
-
-          <ul>
-            <li><a href="#0">All Images</a></li>
-            <li><a href="#0">Edit Image</a></li>
-          </ul>
-        </li>
-
-        <li class="has-children users">
-          <a href="#0">Users</a>
-
-          <ul>
-            <li><a href="#0">All Users</a></li>
-            <li><a href="#0">Edit User</a></li>
-            <li><a href="#0">Add User</a></li>
           </ul>
         </li>
       </ul>
