--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -99,3 +99,19 @@ a:hover,a:focus{
     border-bottom: 0;
   }
 }
+
+.view-box{
+  margin: 55px 0 0 200px
+}
+/* Responsive: Portrait tablets and up */
+@media screen and (max-width: 1170px) {
+  .view-box{
+    margin: 55px 0 0 110px
+  }
+}
+/* Responsive: Portrait tablets and up */
+@media screen and (max-width: 768px) {
+  .view-box{
+    margin: 45px 0 0 0
+  }
+}
