--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -9,7 +9,8 @@
         <li><a href="#0">Support</a></li>
         <li class="has-children account">
           <a href="#0">
-            <img src="img/cd-avatar.png" alt="avatar">
+            <i class="fa fa-user fa-fw"></i>
+            <!--<img src="img/cd-avatar.png" alt="avatar">-->
             Account
           </a>
 
