--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -18,7 +18,7 @@
 
             <li><a href="#0">My Account</a></li>
             <li><a href="#0">Edit Account</a></li>
-            <li><a href="#0">Logout</a></li>
+            <li><a href="javascript:void (0)" ng-click="navbar.logout()">Logout</a></li>
           </ul>
         </li>
       </ul>
@@ -33,18 +33,17 @@
           <a href="#0"><i class="fa fa-pie-chart fa-fw"></i>&nbsp;&nbsp;Overview</a>
 
           <ul>
-            <li><a href="#0">All Data</a></li>
-            <li><a href="#0">Category 1</a></li>
-            <li><a href="#0">Category 2</a></li>
+            <li><a href="#!/dinner">点餐</a></li>
+            <li><a href="#!/time">估算</a></li>
+            <li><a href="#0">预留项目</a></li>
           </ul>
         </li>
         <li class="has-children notifications active">
           <a href="#0"><i class="fa fa-bell fa-fw"></i>&nbsp;&nbsp;Notifications<span class="count">3</span></a>
 
           <ul>
-            <li><a href="#0">All Notifications</a></li>
-            <li><a href="#0">Friends</a></li>
-            <li><a href="#0">Other</a></li>
+            <li><a href="#0">预留项目</a></li>
+            <li><a href="#0">预留项目</a></li>
           </ul>
         </li>
 
