--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -9,8 +9,7 @@
         <li><a href="#0">Support</a></li>
         <li class="has-children account">
           <a href="#0">
-            <i class="fa fa-user fa-fw"></i>
-            <!--<img src="img/cd-avatar.png" alt="avatar">-->
+            <img src="images/avatar.jpg" alt="avatar">
             Account
           </a>
 
