--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -10,13 +10,13 @@
         <li class="has-children account">
           <a href="#0">
             <img src="images/avatar.jpg" alt="avatar">
-            Account
+            {{navbar.userName}}
           </a>
 
           <ul>
 
-            <li><a href="#0">My Account</a></li>
-            <li><a href="#0">Edit Account</a></li>
+            <!--<li><a href="#0">My Account</a></li>-->
+            <!--<li><a href="#0">Edit Account</a></li>-->
             <li><a href="javascript:void (0)" ng-click="navbar.logout()">Logout</a></li>
           </ul>
         </li>
