--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -5,8 +5,7 @@
 
     <nav class="cd-nav">
       <ul class="cd-top-nav">
-        <li><a href="#0">Tour</a></li>
-        <li><a href="#0">Support</a></li>
+        <li><a href="#0">Help</a></li>
         <li class="has-children account">
           <a href="#0">
             <img src="images/avatar.jpg" alt="avatar">
@@ -32,8 +31,8 @@
           <a href="#0"><i class="fa fa-pie-chart fa-fw"></i>&nbsp;&nbsp;Overview</a>
 
           <ul>
-            <li><a href="#!/dinner">点餐</a></li>
-            <li><a href="#!/time">估算</a></li>
+            <li><a href="#0">预留项目</a></li>
+            <li><a href="#0">预留项目</a></li>
             <li><a href="#0">预留项目</a></li>
           </ul>
         </li>
@@ -41,8 +40,8 @@
           <a href="#0"><i class="fa fa-bell fa-fw"></i>&nbsp;&nbsp;Notifications<span class="count">3</span></a>
 
           <ul>
-            <li><a href="#0">预留项目</a></li>
-            <li><a href="#0">预留项目</a></li>
+            <li><a href="#!/dinner">点餐</a></li>
+            <li><a href="#!/time">估算</a></li>
           </ul>
         </li>
 
