--- a/app/views/overview.html
+++ b/app/views/overview.html
@@ -1,39 +1,65 @@
 <style>
+  .item_content {
+    width:85%;
+    height:460px;
+    margin:18% auto;
+  }
   .item_content ul  {
     list-style:none;
+    padding:0;
+
   }
   .item_content ul li {
-    width:200px;
-    height:120px;
+    width:31%;
+    height:80px;
     float:left;
-    margin:10px
-  }
-  .item_content {
-    width:940px;
-    height:460px;
-    margin:0 auto;
+    margin:1%
   }
   .item_content .item {
-    width:200px;
-    height:120px;
-    line-height:120px;
+    width:100%;
+    height:100%;
     text-align:center;
     cursor:pointer;
     background:#ccc;
+    border-radius: 5px;
   }
-  .item_content .item img {
-    width:200px;
-    height:120px;
-    border-radius:6px;
+  @media only screen and (min-width: 768px) {
+    .item_content ul li{
+      width:23%;
+      height:108px;
+      line-height:108px;
+    }
+    .item_content {
+      margin:15% auto;
+    }
+  }
+  @media only screen and (min-width: 1173px) {
+    .item_content ul li{
+      width:18%;
+      height:140px;
+      line-height: 140px;
+    }
+    .item_content {
+      margin:13% auto;
+    }
+  }
+  @media only screen and (min-width: 1560px) {
+    .item_content ul li{
+      width:14.6%;
+      height:160px;
+      line-height: 160px;
+    }
+    .item_content {
+      margin:11% auto;
+    }
   }
 </style>
-<div style="margin: 10% 0;">
+<div>
   <div class="item_container">
     <div class="item_content">
-      <ul>
+      <ul style="margin:0 auto">
         <li ng-repeat="link in datas">
           <div class="item">
-            <img src="images/youku.png" alt="youku"/>
           </div>
         </li>
       </ul>
