--- a/app/views/navbar.html
+++ b/app/views/navbar.html
@@ -5,7 +5,7 @@
 
     <nav class="cd-nav">
       <ul class="cd-top-nav">
-        <li><a href="#0">Help</a></li>
+        <li><a href="#!/help">Help</a></li>
         <li class="has-children account">
           <a href="#0">
             <img src="images/avatar.jpg" alt="avatar">
